<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_top"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_detect"
            android:title="@string/detect_disease_text" />
        <item
            android:id="@+id/nav_community"
            android:title="@string/community_text"/>
        <item
            android:id="@+id/nav_shop"
            android:title="@string/shop_text"/>
        <item
            android:id="@+id/nav_chat_support"
            android:title="@string/chatbot_text"/>
    </group>
    <group android:id="@+id/nav_bottom" android:checkableBehavior="single">
        <item
            android:title="@string/map_text"
            android:id="@+id/nav_map" />
        <item
            android:title="@string/approx_production_text"
            android:id="@+id/nav_approx_production" />
    </group>
</menu>