<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loan.LoanFragment">

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/username_text"
        android:hint="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@id/username_text"
        android:id="@+id/password_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_below="@id/password_text"
        android:id="@+id/radioGroupUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/personal_account_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <RadioButton
            android:text="@string/organization_account_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RadioGroup>
    <Button
        android:id="@+id/login_btn_id"
        android:text="@string/login_text"
        android:layout_below="@id/radioGroupUserType"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@id/login_btn_id"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/or_text"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/signup_btn"
        android:layout_centerInParent="true"
        android:text="@string/signup_text"
        android:layout_below="@id/login_btn_id"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>