<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="100dp"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/leaf"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/loan_textview"
            android:text="@string/loan_text"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/loan_amount_textview"
            android:text="@string/loan_max_amount_text"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/loan_period_textview"
            android:text="@string/loan_period_text"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>