<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".loan.SearchFragment">
    <TextView
        android:padding="10dp"
        android:text="@string/loan_search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/loanAmount"
        android:hint="@string/maximum_amount"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:textColor="@android:color/holo_red_dark"
            android:text="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/loanDuration"
        android:hint="@string/maximum_duration"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@android:color/holo_red_dark"
        android:text="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_width=""
        android:layout_height="" />

    </LinearLayout>